  `POST /api/collections/cName/shards/sName/force-leader`, "RELOAD" is now available at `POST /api/collections/cName/reload`,
  "SYNCSHARD" is now available at `POST /api/collections/cName/shards/sName/sync-shard`, and "RENAME" is now available at
  `POST /api/collections/cName/rename`. (Jason Gerlowski)

Optimizations
---------------------

* SOLR-16694: Shortcut Http2SolrClient mimeType check for default response parse (Tomás Fernández Löbbe, Alex Deparvu)

* SOLR-16692: Allow setting the a CookieStore implementation in Http2SolrClient. When Cookies are not needed, this can be set to
  `org.eclipse.jetty.util.HttpCookieStore.Empty`, which avoids some of the processing that happens in the default `java.net.InMemoryCookieStore`.
  Solr can also be started with the system property `solr.http.disableCookies` set to `true`, so that the internal clients
  that Solr uses to communicate between nodes use `HttpCookieStore.Empty`. (Tomás Fernández Löbbe)

* SOLR-16693: For query timeAllowed, switch from ExitableDirectoryReader to TimeLimitingBulkScorer (David Smiley)

* SOLR-16764: Clarify that ExportTool exports documents in JSON with Lines format, not standard JSON.  Add explicit -compress option for gzipping output.
  Add ability to specific a directory for output along with a specific file when using -out. (Eric Pugh)

* SOLR-14630: When querying with the `_route_` or `shards.preference` parameter and if there are multiple replicas for a
  collection on the receiving node, there was sometimes an extra HTTP hop or the non-intended replica may receive the
  request. SolrJ will now form the URL directly to the intended replica of the collection (and not the collection itself).
  (Pierre Salagnac, Ivan Djurasevic, Jason Baik)

Bug Fixes
---------------------

* SOLR-16638: Fix Http2SolrClient's exception message when serverBaseUrl is null (Alex Deparvu via Kevin Risden)

* SOLR-16723: Http2SolrClient should not use Apache Http client classes (Kevin Risden)
