@@ -386,11 +386,9 @@ http://localhost:8983/solr/admin/collections?action=BALANCESHARDUNIQUE&collectio
 
 [source,bash]
 ----
-curl -X POST http://localhost:8983/api/collections/techproducts -H 'Content-Type: application/json' -d '
+curl -X POST http://localhost:8983/api/collections/techproducts/balance-shard-unique -H 'Content-Type: application/json' -d '
   {
-    "balance-shard-unique": {
-      "property": "preferredLeader"
-    }
+    "property": "preferredLeader"
   }
 '
 ----
